--- a/arch/Makefile.inc
+++ b/arch/Makefile.inc
@@ -105,6 +105,7 @@ PROCESSOR_SRC = \
 	arch/drisc/ISA.mtsparc.h \
 	arch/drisc/ISA.mips.h \
         arch/drisc/ISA.or1k.h \
+	arch/drisc/ISA.rv64.h \
 	arch/drisc/MemoryStage.cpp \
 	arch/drisc/MMUInterface.cpp \
 	arch/drisc/MMUInterface.h \
@@ -198,6 +199,7 @@ endif
 EXTRA_DIST += \
 	arch/drisc/ISA.mips.cpp \
         arch/drisc/ISA.or1k.cpp \
+	arch/drisc/ISA.rv64.cpp \
 	arch/drisc/ISA.mtalpha.cpp \
 	arch/drisc/ISA.mtsparc.cpp
 
